[package]
name = "sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = true # Instruct the linker to optimize at the link stage
#strip = true  # Automatically strip symbols from the binary.
#opt-level = 3


[dependencies]
nannou = "0.19.0"
nannou_egui = "0.19.0"
strum = "0.27.1"
strum_macros = "0.27.1"
