[package]
name = "sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = true # Instruct the linker to optimize at the link stage
#strip = true  # Automatically strip symbols from the binary.
#opt-level = 3

[lib]
crate-type = ["cdylib"]      # Export as a C-compatible dynamic library for wasm-bindgen

[dependencies]
nannou = {version="0.19.0", features = ["wasm-experimental"]}
nannou_egui = "0.19.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
winit = "0.28.7"
async-std = { version = "1.10.0", features = ["unstable"] }
strum = "0.27.1"
strum_macros = "0.27.1"


[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

