[package]
name = "sort"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 3

[lib]
crate-type = ["cdylib"]      # Export as a C-compatible dynamic library for wasm-bindgen

[[bin]]
name="sort_bin"
path="src/main.rs"

[dependencies]
nannou = {version="0.19.0", features = ["wasm-experimental"]}
nannou_egui = "0.19.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
winit = "0.28.7"
async-std = { version = "1.10.0", features = ["unstable"] }
console_error_panic_hook = "0.1.5"
strum = "0.27.2"
strum_macros = "0.27.2"
nannou_audio = "0.19.0"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]


